--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="logo">
       <img src="images/objectified-logo.png">
     </div>
-    <div class="tagline test">
+    <div class="tagline">
       <h1>Life Stories Like You've Never Seen</h1>
     </div>
   </div>
