--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Objectified</title>
+
+  <meta name="description" content="Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel" />
+  <meta property="og:image" content="/images/og-image-objectified-480x360.jpg" />
+  <meta property="og:image" content="/images/og-image-objectified-1200x630.jpg" />
   <link href="https://fonts.googleapis.com/css?family=Oswald:500" rel="stylesheet">
   <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/main.css" rel="stylesheet">
