--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
       <h1>Sundays at 8pm<sup>ct</sup>/ 5pm<sup>pt</sup> <img src="images/foxnews-logo.jpg"></h1>
     </div>
     <div class="social-media">
-      <a href="#"><i class="icon-facebook"></i></a>
-      <a href="#"><i class="icon-twitter"></i></a>
-      <a href="#"><i class="icon-mail"></i></a>
+      <a target="_blank" href="http://www.facebook.com/share.php?u=https://wb-objectifiedtv-site.github.io/&title=Objectified"><i class="icon-facebook"></i></a>
+      <a target="_blank" href="http://twitter.com/home?status=Objectified+https://wb-objectifiedtv-site.github.io/"><i class="icon-twitter"></i></a>
+      <a target="_blank" href="#"><i class="icon-mail"></i></a>
     </div>
   </div>
 </div>
