targeted social links as popups

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <h1>Sundays at 8pm<sup>ct</sup>/ 5pm<sup>pt</sup> <img src="images/foxnews-logo.jpg"></h1>
     </div>
     <div class="social-media">
-      <a target="_blank" href="http://www.facebook.com/share.php?u=https://wb-objectifiedtv-site.github.io/&title=Objectified"><i class="icon-facebook"></i></a>
-      <a target="_blank" href="http://twitter.com/home?status=Objectified+https://wb-objectifiedtv-site.github.io/"><i class="icon-twitter"></i></a>
+      <a href="http://www.facebook.com/share.php?u=https://wb-objectifiedtv-site.github.io/&title=Objectified" target="popup" onclick="window.open('http://www.facebook.com/share.php?u=https://wb-objectifiedtv-site.github.io/&title=Objectified','popup','width=600,height=600'); return false;"><i class="icon-facebook"></i></a>
+      <a href="http://twitter.com/home?status=Objectified+https://wb-objectifiedtv-site.github.io/" target="popup" onclick="window.open('http://twitter.com/home?status=Objectified+https://wb-objectifiedtv-site.github.io/','popup','width=600,height=600'); return false;"><i class="icon-twitter"></i></a>
       <a target="_blank" href="#"><i class="icon-mail"></i></a>
     </div>
   </div>
