--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
   <title>Objectified</title>
 
   <meta name="description" content="Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel" />
-  <meta property="og:image" content="/images/og-image-objectified-480x360.jpg" />
-  <meta property="og:image" content="/images/og-image-objectified-1200x630.jpg" />
+
+  <meta property="og:title" content="Objectified">
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel" />
+  <meta property="og:image" content="https://wb-objectifiedtv-site.github.io/images/og-image-objectified-480x360.jpg" />
+  <meta property="og:image" content="https://wb-objectifiedtv-site.github.io/images/og-image-objectified-1200x630.jpg" />
+  <meta property="og:url" content="https://wb-objectifiedtv-site.github.io/">
+
   <link href="https://fonts.googleapis.com/css?family=Oswald:500" rel="stylesheet">
   <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/main.css" rel="stylesheet">
