Updating shared links

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <h1>Sundays at 8pm<sup>ct</sup>/ 5pm<sup>pt</sup> <img src="images/foxnews-logo.jpg"></h1>
     </div>
     <div class="social-media">
-      <a href="http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Objectified" target="popup" onclick="window.open('http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Objectified','popup','width=600,height=600'); return false;"><i class="icon-facebook"></i></a>
-      <a href="http://twitter.com/home?status=Objectified+http://objectifiedtv.com/" target="popup" onclick="window.open('http://twitter.com/home?status=Objectified+http://objectifiedtv.com/','popup','width=600,height=600'); return false;"><i class="icon-twitter"></i></a>
+      <a href="http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel" target="popup" onclick="window.open('http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel','popup','width=600,height=600'); return false;"><i class="icon-facebook"></i></a>
+      <a href="http://twitter.com/home?status=Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel+http://objectifiedtv.com/" target="popup" onclick="window.open('http://twitter.com/home?status=Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel+http://objectifiedtv.com/','popup','width=600,height=600'); return false;"><i class="icon-twitter"></i></a>
       <a target="_blank" href="#"><i class="icon-mail"></i></a>
     </div>
   </div>
