--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <meta property="og:title" content="Objectified">
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel" />
-  <meta property="og:image" content="https://wb-objectifiedtv-site.github.io/images/og-image-objectified-480x360.jpg" />
-  <meta property="og:image" content="https://wb-objectifiedtv-site.github.io/images/og-image-objectified-1200x630.jpg" />
+  <meta property="og:image" content="https://wb-objectifiedtv-site.github.io/images/og-image-objectified-480_360.jpg" />
+  <meta property="og:image" content="https://wb-objectifiedtv-site.github.io/images/og-image-objectified-120_x630.jpg" />
   <meta property="og:url" content="https://wb-objectifiedtv-site.github.io/">
 
   <link href="https://fonts.googleapis.com/css?family=Oswald:500" rel="stylesheet">
@@ -39,7 +39,9 @@
 
   <div class="row">
     <div class="video-container">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/YFSSaLB-4SA?&autoplay=1" frameborder="0" allowfullscreen></iframe>
+      <video controls autoplay>
+        <source src="https://assets.tmz.com/sponsorships/objectified_launch_30_tag_sept_17_compressed.mp4" type="video/mp4">
+      </video>
     </div>
   </div>
 
