Updating styles for the new video

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
   </div>
 
   <div class="row">
-    <div class="video-container">
-      <video controls autoplay>
-        <source src="https://assets.tmz.com/sponsorships/objectified_launch_30_tag_sept_17_compressed.mp4" type="video/mp4">
-      </video>
-    </div>
+    <div class="video-container embed-responsive embed-responsive-16by9">
+    <video embed-responsive-item controls autoplay>
+      <source src="https://assets.tmz.com/sponsorships/objectified_launch_30_tag_sept_17_compressed.mp4" type="video/mp4">
+    </video>
+  </div>
   </div>
 
   <div class="row">
