--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <meta property="og:image" content="https://wb-objectifiedtv-site.github.io/images/og-image-objectified-1200_630.jpg" />
   <meta property="og:url" content="https://wb-objectifiedtv-site.github.io/">
 
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="http://wb-objectifiedtv-site.github.io/images/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="http://wb-objectifiedtv-site.github.io/images/favicon.ico" />
   <link rel="apple-touch-icon" sizes="57x57" href="http://wb-objectifiedtv-site.github.io/images/apple-touch-icon-57x57.png"/>
   <link rel="apple-touch-icon" sizes="72x72" href="http://wb-objectifiedtv-site.github.io/images/apple-touch-icon-72x72.png"/>
   <link rel="apple-touch-icon" sizes="76x76" href="http://wb-objectifiedtv-site.github.io/images/apple-touch-icon-76x76.png"/>
