--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="row">
     <div class="video-container embed-responsive embed-responsive-16by9">
     <video embed-responsive-item controls autoplay>
-      <source src="https://assets.tmz.com/sponsorships/objectified_launch_30_tag_sept_17_compressed.mp4" type="video/mp4">
+      <source src="http://wb-objectifiedtv-site.github.io/images/objectified_launch_30_tag_sept_17.mp4" type="video/mp4">
     </video>
   </div>
   </div>
