--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
   <meta property="og:title" content="Objectified">
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel" />
-  <meta property="og:image" content="https://wb-objectifiedtv-site.github.io/images/og-image-objectified-480_360.jpg" />
-  <meta property="og:image" content="https://wb-objectifiedtv-site.github.io/images/og-image-objectified-1200_630.jpg" />
-  <meta property="og:url" content="https://wb-objectifiedtv-site.github.io/">
+  <meta property="og:image" content="http://objectifiedtv.com/images/og-image-objectified-480_360.jpg" />
+  <meta property="og:image" content="http://objectifiedtv.com/images/og-image-objectified-1200_630.jpg" />
+  <meta property="og:url" content="http://objectifiedtv.com">
 
   <link rel="icon" type="image/x-icon" href="http://wb-objectifiedtv-site.github.io/images/favicon.ico" />
   <link rel="shortcut icon" type="image/x-icon" href="http://wb-objectifiedtv-site.github.io/images/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="57x57" href="http://wb-objectifiedtv-site.github.io/images/apple-touch-icon-57x57.png"/>
-  <link rel="apple-touch-icon" sizes="72x72" href="http://wb-objectifiedtv-site.github.io/images/apple-touch-icon-72x72.png"/>
-  <link rel="apple-touch-icon" sizes="76x76" href="http://wb-objectifiedtv-site.github.io/images/apple-touch-icon-76x76.png"/>
-  <link rel="apple-touch-icon" sizes="114x114" href="http://wb-objectifiedtv-site.github.io/images/apple-touch-icon-114x114.png"/>
-  <link rel="apple-touch-icon" sizes="120x120" href="http://wb-objectifiedtv-site.github.io/images/apple-touch-icon-120x120.png"/>
-  <link rel="apple-touch-icon" sizes="144x144" href="http://wb-objectifiedtv-site.github.io/images/apple-touch-icon-144x144.png"/>
-  <link rel="apple-touch-icon" sizes="152x152" href="http://wb-objectifiedtv-site.github.io/images/apple-touch-icon-152x152.png"/>
+  <link rel="apple-touch-icon" sizes="57x57" href="http://objectifiedtv.com/images/apple-touch-icon-57x57.png"/>
+  <link rel="apple-touch-icon" sizes="72x72" href="http://objectifiedtv.com/images/apple-touch-icon-72x72.png"/>
+  <link rel="apple-touch-icon" sizes="76x76" href="http://objectifiedtv.com/images/apple-touch-icon-76x76.png"/>
+  <link rel="apple-touch-icon" sizes="114x114" href="http://objectifiedtv.com/images/apple-touch-icon-114x114.png"/>
+  <link rel="apple-touch-icon" sizes="120x120" href="http://objectifiedtv.com/images/apple-touch-icon-120x120.png"/>
+  <link rel="apple-touch-icon" sizes="144x144" href="http://objectifiedtv.com/images/apple-touch-icon-144x144.png"/>
+  <link rel="apple-touch-icon" sizes="152x152" href="http://objectifiedtv.com/images/apple-touch-icon-152x152.png"/>
 
 
   <link href="https://fonts.googleapis.com/css?family=Oswald:500" rel="stylesheet">
