--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="social-media">
       <a href="http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel" target="popup" onclick="window.open('http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel','popup','width=600,height=600'); return false;"><i class="icon-facebook"></i></a>
       <a href="http://twitter.com/home?status=Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel+http://objectifiedtv.com/" target="popup" onclick="window.open('http://twitter.com/home?status=Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel+http://objectifiedtv.com/','popup','width=600,height=600'); return false;"><i class="icon-twitter"></i></a>
-      <a target="_blank" href="#"><i class="icon-mail"></i></a>
+      <a href="mailto:?subject=Check out Objectified on Fox This Sunday!&amp;body=Visit http://objectifiedtv.com for a preview of &quot;Objectified&quot; – Life Stories Like You've Never Seen. Watch Objectified every Sunday at 8pm CT / 5pm PT on the Fox News Channel." title="Share by Email"><i class="icon-mail"></i></a>
     </div>
   </div>
 </div>
