--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <meta property="og:image" content="http://objectifiedtv.com/images/og-image-objectified-1200_630.jpg" />
   <meta property="og:url" content="http://objectifiedtv.com">
 
-  <link rel="icon" type="image/x-icon" href="http://wb-objectifiedtv-site.github.io/images/favicon.ico" />
-  <link rel="shortcut icon" type="image/x-icon" href="http://wb-objectifiedtv-site.github.io/images/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="http://objectifiedtv.com/images/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="http://objectifiedtv.com/images/favicon.ico" />
   <link rel="apple-touch-icon" sizes="57x57" href="http://objectifiedtv.com/images/apple-touch-icon-57x57.png"/>
   <link rel="apple-touch-icon" sizes="72x72" href="http://objectifiedtv.com/images/apple-touch-icon-72x72.png"/>
   <link rel="apple-touch-icon" sizes="76x76" href="http://objectifiedtv.com/images/apple-touch-icon-76x76.png"/>
@@ -53,7 +53,7 @@
   <div class="row">
     <div class="video-container embed-responsive embed-responsive-16by9">
     <video embed-responsive-item controls autoplay>
-      <source src="http://wb-objectifiedtv-site.github.io/images/objectified_launch_30_tag_sept_17.mp4" type="video/mp4">
+      <source src="http://objectifiedtv.com/images/objectified_launch_30_tag_sept_17.mp4" type="video/mp4">
     </video>
   </div>
   </div>
