--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
   <link rel="icon" type="image/x-icon" href="http://objectifiedtv.com/images/favicon.ico" />
   <link rel="shortcut icon" type="image/x-icon" href="http://objectifiedtv.com/images/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="57x57" href="http://objectifiedtv.com/images/apple-touch-icon-57x57.png"/>
-  <link rel="apple-touch-icon" sizes="72x72" href="http://objectifiedtv.com/images/apple-touch-icon-72x72.png"/>
-  <link rel="apple-touch-icon" sizes="76x76" href="http://objectifiedtv.com/images/apple-touch-icon-76x76.png"/>
-  <link rel="apple-touch-icon" sizes="114x114" href="http://objectifiedtv.com/images/apple-touch-icon-114x114.png"/>
-  <link rel="apple-touch-icon" sizes="120x120" href="http://objectifiedtv.com/images/apple-touch-icon-120x120.png"/>
-  <link rel="apple-touch-icon" sizes="144x144" href="http://objectifiedtv.com/images/apple-touch-icon-144x144.png"/>
-  <link rel="apple-touch-icon" sizes="152x152" href="http://objectifiedtv.com/images/apple-touch-icon-152x152.png"/>
+  <link rel="apple-touch-icon" sizes="57x57" href="http://objectifiedtv.com/images/apple-touch-icon-57x57.jpg"/>
+  <link rel="apple-touch-icon" sizes="72x72" href="http://objectifiedtv.com/images/apple-touch-icon-72x72.jpg"/>
+  <link rel="apple-touch-icon" sizes="76x76" href="http://objectifiedtv.com/images/apple-touch-icon-76x76.jpg"/>
+  <link rel="apple-touch-icon" sizes="114x114" href="http://objectifiedtv.com/images/apple-touch-icon-114x114.jpg"/>
+  <link rel="apple-touch-icon" sizes="120x120" href="http://objectifiedtv.com/images/apple-touch-icon-120x120.jpg"/>
+  <link rel="apple-touch-icon" sizes="144x144" href="http://objectifiedtv.com/images/apple-touch-icon-144x144.jpg"/>
+  <link rel="apple-touch-icon" sizes="152x152" href="http://objectifiedtv.com/images/apple-touch-icon-152x152.jpg"/>
 
 
   <link href="https://fonts.googleapis.com/css?family=Oswald:500" rel="stylesheet">
