Changed all CT times to ET

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
   <title>Objectified</title>
 
-  <meta name="description" content="Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel" />
+  <meta name="description" content="Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel" />
 
   <meta property="og:title" content="Objectified">
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel" />
+  <meta property="og:description" content="Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel" />
   <meta property="og:image" content="http://objectifiedtv.com/images/og-image-objectified-480_360.jpg" />
   <meta property="og:image" content="http://objectifiedtv.com/images/og-image-objectified-1200_630.jpg" />
   <meta property="og:url" content="http://objectifiedtv.com">
@@ -60,12 +60,12 @@
 
   <div class="row">
     <div class="time-network">
-      <h1>Sundays at 8pm<sup>ct</sup>/ 5pm<sup>pt</sup> <img src="images/foxnews-logo.jpg"></h1>
+      <h1>Sundays at 8pm<sup>et</sup>/ 5pm<sup>pt</sup> <img src="images/foxnews-logo.jpg"></h1>
     </div>
     <div class="social-media">
-      <a href="http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel" target="popup" onclick="window.open('http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel','popup','width=600,height=600'); return false;"><i class="icon-facebook"></i></a>
-      <a href="http://twitter.com/home?status=Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel+http://objectifiedtv.com/" target="popup" onclick="window.open('http://twitter.com/home?status=Watch Objectified, Sundays at 8pm CT / 5pm PT on the Fox News Channel+http://objectifiedtv.com/','popup','width=600,height=600'); return false;"><i class="icon-twitter"></i></a>
-      <a href="mailto:?subject=Check out Objectified on Fox This Sunday!&amp;body=Visit http://objectifiedtv.com for a preview of &quot;Objectified&quot; – Life Stories Like You've Never Seen. Watch Objectified every Sunday at 8pm CT / 5pm PT on the Fox News Channel." title="Share by Email"><i class="icon-mail"></i></a>
+      <a href="http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel" target="popup" onclick="window.open('http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel','popup','width=600,height=600'); return false;"><i class="icon-facebook"></i></a>
+      <a href="http://twitter.com/home?status=Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel+http://objectifiedtv.com/" target="popup" onclick="window.open('http://twitter.com/home?status=Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel+http://objectifiedtv.com/','popup','width=600,height=600'); return false;"><i class="icon-twitter"></i></a>
+      <a href="mailto:?subject=Check out Objectified on Fox This Sunday!&amp;body=Visit http://objectifiedtv.com for a preview of &quot;Objectified&quot; – Life Stories Like You've Never Seen. Watch Objectified every Sunday at 8pm ET / 5pm PT on the Fox News Channel." title="Share by Email"><i class="icon-mail"></i></a>
     </div>
   </div>
 </div>
