--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <div class="row">
     <div class="video-container embed-responsive embed-responsive-16by9">
-    <video embed-responsive-item controls autoplay muted>
+    <video class="embed-responsive-item" controls autoplay muted>
       <source src="http://objectifiedtv.com/images/objectified_launch_30_tag_sept_17.mp4" type="video/mp4">
     </video>
   </div>
@@ -73,6 +73,6 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
