--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <div class="row">
     <div class="video-container embed-responsive embed-responsive-16by9">
-    <video autoplay controls poster="images/shaq-video-player-still-small-FRIDAY.jpg">
+    <video autoplay muted poster="images/shaq-video-player-still-small-FRIDAY.jpg" controls>
       <source src="http://objectifiedtv.com/images/objectified_launch_30_tag_sept_17.mp4" type="video/mp4">
     </video>
   </div>
