--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <div class="row">
     <div class="video-container embed-responsive embed-responsive-16by9">
-    <video id="video" autoplay muted poster="images/shaq-video-player-still-small-FRIDAY.jpg" controls>
+    <video id="video" autoplay poster="images/shaq-video-player-still-small-FRIDAY.jpg" controls>
       <source src="http://objectifiedtv.com/images/objectified_launch_30_tag_sept_17.mp4" type="video/mp4">
     </video>
   </div>
@@ -80,9 +80,8 @@
 </div>
 
 <script>
-
   var video=document.getElementById("video");
-
+  video.defaultMuted = true;
   $(video).on("click", function(e){
     if(video.muted){
       video.muted = false;
@@ -91,7 +90,6 @@
       video.muted = true;
     }
   });
-
 </script>
 
 </body>
