--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <div class="row">
     <div class="time-network">
-      <h1>Sundays at 8pm<sup>et</sup>/ 5pm<sup>pt</sup> <img src="images/foxnews-logo.jpg"></h1>
+      <h1>Sundays at 8pm<sup>et</sup>/ 5pm<sup>pt</sup> <img src="images/fox.png"></h1>
     </div>
     <div class="social-media">
       <a href="http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel" target="popup" onclick="window.open('http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel','popup','width=600,height=600'); return false;"><i class="icon-facebook"></i></a>
