--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
   <div class="row">
     <div class="video-container embed-responsive embed-responsive-16by9">
-    <video id="video" autoplay poster="images/judy-video-player-still-small-SAT_SUN.jpg" controls>
-      <source src="https://assets.tmz.com/sponsorships/objectified_topical_judge_judy_30_tag_sept_17_compressed.mp4" type="video/mp4">
+    <video id="video" autoplay poster="images/shaq-video-player-still-small-FRIDAY.jpg" controls>
+      <source src="images/objectified_launch_30_tag_sept_17.mp4" type="video/mp4">
     </video>
   </div>
   </div>
