--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="row">
     <div class="video-container embed-responsive embed-responsive-16by9">
     <video id="video" autoplay poster="images/shaq-video-player-still-small-FRIDAY.jpg" controls>
-      <source src="images/objectified_launch_30_tag_sept_17.mp4" type="video/mp4">
+      <source src="https://ll-assets.tmz.com/sponsorships/objectified_series_launch_30_v28_airing_sundays.mp4" type="video/mp4">
     </video>
   </div>
   </div>
