--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
   <div class="row">
     <div class="video-container embed-responsive embed-responsive-16by9">
-    <video id="video" autoplay poster="images/shaq-video-player-still-small-FRIDAY.jpg" controls>
-      <source src="https://ll-assets.tmz.com/sponsorships/objectified_series_launch_30_v28_airing_sundays.mp4" type="video/mp4">
+    <video id="video" autoplay poster="images/Simon-Cowel-Objectified-Approved-Still-01.jpg" controls>
+      <source src="https://assets.tmz.com/sponsorships/OBJECTified_Simon_Cowell_TMZ_Promo_Final_092717.mp4" type="video/mp4">
     </video>
   </div>
   </div>
