--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
   <div class="row">
     <div class="video-container embed-responsive embed-responsive-16by9">
-    <video id="video" autoplay poster="images/shaq-video-player-still-small-FRIDAY.jpg" controls>
-      <source src="https://assets.tmz.com/sponsorships/objectified_series_launch_30_v28_airing_sundays.mp4" type="video/mp4">
+    <video id="video" autoplay poster="images/objectified-typer-perry-approved-still-min.jpg" controls>
+      <source src="https://assets.tmz.com/sponsorships/OBJECTified_TylerPerry_iHeart_Radio_Spot_Sunday_10.10.17.mp4" type="video/mp4">
     </video>
   </div>
   </div>
