week 11 tyson redux

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   </div>
   <div class="row">
     <div class="video-container embed-responsive embed-responsive-16by9">
-    <video id="video" autoplay poster="images/shaq-video-player-still-small-FRIDAY.jpg" controls>
-      <source src="https://assets.tmz.com/sponsorships/objectified_series_launch_30_v28_airing_sundays.mp4" type="video/mp4">
+    <video id="video" autoplay poster="https://media.tmz.com/2017/11/21/objectified-mike-tyson-landing-still-01-min-1.jpg" controls>
+      <source src="https://tmzvod-a.akamaihd.net/tmz/2017-12/01/0_uj80qalr_0_kfr8hd7l.mp4" type="video/mp4">
     </video>
   </div>
   </div>
