--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
   <div class="row">
     <div class="video-container embed-responsive embed-responsive-16by9">
     <video id="video" autoplay poster="images/shaq-video-player-still-small-FRIDAY.jpg" controls>
-      <source src="https://assets.tmz.com/sponsorships/objectified_series_launch_30_v28_airing_sundays.mp4" type="video/mp4">
+      <source src="https://tmzvod-a.akamaihd.net/tmz/2017-12/13/0_d4abkhhy_0_585nbqh7.mp4" type="video/mp4">
     </video>
   </div>
   </div>
 
   <div class="row">
     <div class="time-network">
-      <h1>Sundays at 8pm<sup>et</sup>/ 5pm<sup>pt</sup> <img src="images/fox.png"></h1>
+      <h1>Check local listings <img src="images/fox.png"></h1>
     </div>
     <div class="social-media">
       <a href="http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel" target="popup" onclick="window.open('http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel','popup','width=600,height=600'); return false;"><i class="icon-facebook"></i></a>
