--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
   <link rel="apple-touch-icon" sizes="144x144" href="http://objectifiedtv.com/images/apple-touch-icon-144x144.jpg"/>
   <link rel="apple-touch-icon" sizes="152x152" href="http://objectifiedtv.com/images/apple-touch-icon-152x152.jpg"/>
 
-
   <link href="https://fonts.googleapis.com/css?family=Oswald:500" rel="stylesheet">
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
@@ -49,33 +48,17 @@
 
 </head>
 <body id="objectified-bg">
-<div class="container">
-  <div class="row">
-    <div class="logo">
-      <img src="images/objectified-logo.png">
-    </div>
-    <div class="tagline">
-      <h1>Life Stories Like You've Never Seen</h1>
-    </div>
-  </div>
-  <div class="row">
-    <div class="video-container embed-responsive embed-responsive-16by9">
-    <video id="video" autoplay poster="images/shaq-video-player-still-small-FRIDAY.jpg" controls>
-      <source src="https://tmzvod-a.akamaihd.net/tmz/2017-12/13/0_d4abkhhy_0_585nbqh7.mp4" type="video/mp4">
-    </video>
-  </div>
-  </div>
+<div class="nav-stripe"></div>
 
-  <div class="row">
-    <div class="time-network">
-      <h1>Check local listings <img src="images/fox.png"></h1>
-    </div>
-    <div class="social-media">
-      <a href="http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel" target="popup" onclick="window.open('http://www.facebook.com/share.php?u=http://objectifiedtv.com/&title=Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel','popup','width=600,height=600'); return false;"><i class="icon-facebook"></i></a>
-      <a href="http://twitter.com/home?status=Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel+http://objectifiedtv.com/" target="popup" onclick="window.open('http://twitter.com/home?status=Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel+http://objectifiedtv.com/','popup','width=600,height=600'); return false;"><i class="icon-twitter"></i></a>
-      <a href="mailto:?subject=Check out Objectified on Fox This Sunday!&amp;body=Visit http://objectifiedtv.com for a preview of &quot;Objectified&quot; – Life Stories Like You've Never Seen. Watch Objectified every Sunday at 8pm ET / 5pm PT on the Fox News Channel." title="Share by Email"><i class="icon-mail"></i></a>
-    </div>
+<div class="header">
+  <div class="logo">
+    <img src="images/objectified-logo.png">
   </div>
+  <div class="time">
+    <img src="images/Day_TimeCTA.png">
+  </div>
+  <div class="life-stories">Life Stories</div>
+  <div class="video">Video</div>
 </div>
 
 
