Re #5: styled logo and times responsively

--- a/index.html
+++ b/index.html
@@ -50,13 +50,15 @@
 <body id="objectified-bg">
 <div class="nav-stripe"></div>
 
-<div class="header">
+<div class="top-half">
   <div class="logo">
     <img src="images/objectified-logo.png">
   </div>
   <div class="time">
     <img src="images/Day_TimeCTA.png">
   </div>
+
+
   <div class="life-stories">Life Stories</div>
   <div class="video">Video</div>
 </div>
