Re #5: styled life stories section responsively

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="apple-touch-icon" sizes="144x144" href="http://objectifiedtv.com/images/apple-touch-icon-144x144.jpg"/>
   <link rel="apple-touch-icon" sizes="152x152" href="http://objectifiedtv.com/images/apple-touch-icon-152x152.jpg"/>
 
-  <link href="https://fonts.googleapis.com/css?family=Oswald:500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -59,7 +59,15 @@
   </div>
 
 
-  <div class="life-stories">Life Stories</div>
+  <div class="life-stories">
+    <div class="life-stories-title">
+      <h2 class="life-stories-title-f1">Life Stories Like</h2>
+      <h2 class="life-stories-title-f2">You've Never Seen</h2>
+    </div>
+    <div class="life-stories-blurbs">
+      Each week, Harvey Levin will showcase intimate interviews with high-profile newsmakers and celebrities who will tell their life stories through certain objects they have chosen to keep close over the years. The objects are jumping points in understanding how certain experiences shaped them into who they are today.
+    </div>
+  </div>
   <div class="video">Video</div>
 </div>
 
