Re #5: adding placeholder video and styling it for every break point

--- a/index.html
+++ b/index.html
@@ -68,7 +68,17 @@
       Each week, Harvey Levin will showcase intimate interviews with high-profile newsmakers and celebrities who will tell their life stories through certain objects they have chosen to keep close over the years. The objects are jumping points in understanding how certain experiences shaped them into who they are today.
     </div>
   </div>
-  <div class="video">Video</div>
+  <div class="video">
+    <div class="video-container">
+      <video controls <!-- autoplay --> muted>
+      <source src="https://assets.tmz.com/sponsorships/objectified_launch_30_tag_sept_17_compressed.mp4" type="video/mp4">
+      </video>
+    </div>
+  </div>
+</div>
+
+<div class="bottom-half">
+  Hello There!
 </div>
 
 
