--- a/index.html
+++ b/index.html
@@ -78,7 +78,140 @@
 </div>
 
 <div class="bottom-half">
-  Hello There!
+  <div class="season-guests-title col-lg-2 col-md-3 col-sm-4 col-sm-12">
+    <h2 class="season-guests-title-f1">Season</h2>
+    <h2 class="season-guests-title-f2">Guests</h2>
+  </div>
+
+  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
+    <div class="guest-image">
+      <img src="images/magic-johnson.jpg" class="guest-image-width">
+    </div>
+    <div class="guest-date">
+      June 24
+    </div>
+    <div class="guest-name">
+      Magic Johnson
+    </div>
+  </div>
+
+  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
+    <div class="guest-image">
+      <img src="images/magic-johnson.jpg" class="guest-image-width">
+    </div>
+    <div class="guest-date">
+      June 24
+    </div>
+    <div class="guest-name">
+      Magic Johnson
+    </div>
+  </div>
+
+
+  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
+    <div class="guest-image">
+      <img src="images/magic-johnson.jpg" class="guest-image-width">
+    </div>
+    <div class="guest-date">
+      June 24
+    </div>
+    <div class="guest-name">
+      Magic Johnson
+    </div>
+  </div>
+
+
+  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
+    <div class="guest-image">
+      <img src="images/magic-johnson.jpg" class="guest-image-width">
+    </div>
+    <div class="guest-date">
+      June 24
+    </div>
+    <div class="guest-name">
+      Magic Johnson
+    </div>
+  </div>
+
+
+  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
+    <div class="guest-image">
+      <img src="images/magic-johnson.jpg" class="guest-image-width">
+    </div>
+    <div class="guest-date">
+      June 24
+    </div>
+    <div class="guest-name">
+      Magic Johnson
+    </div>
+  </div>
+
+  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
+    <div class="guest-image">
+      <img src="images/magic-johnson.jpg" class="guest-image-width">
+    </div>
+    <div class="guest-date">
+      June 24
+    </div>
+    <div class="guest-name">
+      Magic Johnson
+    </div>
+  </div>
+
+  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
+    <div class="guest-image">
+      <img src="images/magic-johnson.jpg" class="guest-image-width">
+    </div>
+    <div class="guest-date">
+      June 24
+    </div>
+    <div class="guest-name">
+      Magic Johnson
+    </div>
+  </div>
+
+
+  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
+    <div class="guest-image">
+      <img src="images/magic-johnson.jpg" class="guest-image-width">
+    </div>
+    <div class="guest-date">
+      June 24
+    </div>
+    <div class="guest-name">
+      Magic Johnson
+    </div>
+  </div>
+
+
+  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
+    <div class="guest-image">
+      <img src="images/magic-johnson.jpg" class="guest-image-width">
+    </div>
+    <div class="guest-date">
+      June 24
+    </div>
+    <div class="guest-name">
+      Magic Johnson
+    </div>
+  </div>
+
+
+  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
+    <div class="guest-image">
+      <img src="images/magic-johnson.jpg" class="guest-image-width">
+    </div>
+    <div class="guest-date">
+      June 24
+    </div>
+    <div class="guest-name">
+      Magic Johnson
+    </div>
+  </div>
+
+
+
+
 </div>
 
 
