--- a/index.html
+++ b/index.html
@@ -78,136 +78,126 @@
 </div>
 
 <div class="bottom-half">
-  <div class="season-guests-title col-lg-2 col-md-3 col-sm-4 col-sm-12">
+  <div class="season-guests-title col-md-2 col-sm-2 col-sm-12">
     <h2 class="season-guests-title-f1">Season</h2>
     <h2 class="season-guests-title-f2">Guests</h2>
   </div>
 
-  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
-    <div class="guest-image">
-      <img src="images/magic-johnson.jpg" class="guest-image-width">
+  <div class="season-guests-row col-lg-10 col-md-9 col-sm-8 col-xs-12">
+    <div class="season-guests-celebrity">
+      <div class="guest-image">
+        <img src="images/celebs/magicjohnson.jpg" class="guest-image-width">
+      </div>
+      <div class="guest-date">
+        June 24
+      </div>
+      <div class="guest-name">
+        Magic Johnson
+      </div>
     </div>
-    <div class="guest-date">
-      June 24
+    <div class="season-guests-celebrity">
+      <div class="guest-image">
+        <img src="images/celebs/krisjenner.jpg" class="guest-image-width">
+      </div>
+      <div class="guest-date">
+        July 1
+      </div>
+      <div class="guest-name">
+        Kris Jenner
+      </div>
     </div>
-    <div class="guest-name">
-      Magic Johnson
+    <div class="season-guests-celebrity">
+      <div class="guest-image">
+        <img src="images/celebs/dr-phil.jpg" class="guest-image-width">
+      </div>
+      <div class="guest-date">
+        July 8
+      </div>
+      <div class="guest-name">
+        Dr. Phil
+      </div>
     </div>
+    <div class="season-guests-celebrity">
+      <div class="guest-image">
+        <img src="images/celebs/steventyler.jpg" class="guest-image-width">
+      </div>
+      <div class="guest-date">
+        July 15
+      </div>
+      <div class="guest-name">
+        Steven Tyler
+      </div>
+    </div>
+    <div class="season-guests-celebrity">
+      <div class="guest-image">
+        <img src="images/celebs/alextrebek.jpg" class="guest-image-width">
+      </div>
+      <div class="guest-date">
+        July 22
+      </div>
+      <div class="guest-name">
+        Alex Trebek
+      </div>
+    </div>
+
+    <div class="season-guests-celebrity">
+      <div class="guest-image">
+        <img src="images/celebs/pamanderson.jpg" class="guest-image-width">
+      </div>
+      <div class="guest-date">
+        July 29
+      </div>
+      <div class="guest-name">
+        Pamela Anderson
+      </div>
+    </div>
+    <div class="season-guests-celebrity">
+      <div class="guest-image">
+        <img src="images/celebs/pitbull.jpg" class="guest-image-width">
+      </div>
+      <div class="guest-date">
+        August 5
+      </div>
+      <div class="guest-name">
+        Pitbull
+      </div>
+    </div>
+    <div class="season-guests-celebrity">
+      <div class="guest-image">
+        <img src="images/celebs/willienelson.jpg" class="guest-image-width">
+      </div>
+      <div class="guest-date">
+        August 12
+      </div>
+      <div class="guest-name">
+        Willie Nelson
+      </div>
+    </div>
+    <div class="season-guests-celebrity">
+      <div class="guest-image">
+        <img src="images/celebs/danawhite.jpg" class="guest-image-width">
+      </div>
+      <div class="guest-date">
+        August 19
+      </div>
+      <div class="guest-name">
+        Dana White
+      </div>
+    </div>
+    <div class="season-guests-celebrity">
+      <div class="guest-image">
+        <img src="images/celebs/tbd.jpg" class="guest-image-width">
+      </div>
+      <div class="guest-date">
+        August 26
+      </div>
+      <div class="guest-name">
+        Guest TBD
+      </div>
+    </div>
+
   </div>
 
-  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
-    <div class="guest-image">
-      <img src="images/magic-johnson.jpg" class="guest-image-width">
-    </div>
-    <div class="guest-date">
-      June 24
-    </div>
-    <div class="guest-name">
-      Magic Johnson
-    </div>
-  </div>
-
-
-  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
-    <div class="guest-image">
-      <img src="images/magic-johnson.jpg" class="guest-image-width">
-    </div>
-    <div class="guest-date">
-      June 24
-    </div>
-    <div class="guest-name">
-      Magic Johnson
-    </div>
-  </div>
-
-
-  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
-    <div class="guest-image">
-      <img src="images/magic-johnson.jpg" class="guest-image-width">
-    </div>
-    <div class="guest-date">
-      June 24
-    </div>
-    <div class="guest-name">
-      Magic Johnson
-    </div>
-  </div>
-
-
-  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
-    <div class="guest-image">
-      <img src="images/magic-johnson.jpg" class="guest-image-width">
-    </div>
-    <div class="guest-date">
-      June 24
-    </div>
-    <div class="guest-name">
-      Magic Johnson
-    </div>
-  </div>
-
-  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
-    <div class="guest-image">
-      <img src="images/magic-johnson.jpg" class="guest-image-width">
-    </div>
-    <div class="guest-date">
-      June 24
-    </div>
-    <div class="guest-name">
-      Magic Johnson
-    </div>
-  </div>
-
-  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
-    <div class="guest-image">
-      <img src="images/magic-johnson.jpg" class="guest-image-width">
-    </div>
-    <div class="guest-date">
-      June 24
-    </div>
-    <div class="guest-name">
-      Magic Johnson
-    </div>
-  </div>
-
-
-  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
-    <div class="guest-image">
-      <img src="images/magic-johnson.jpg" class="guest-image-width">
-    </div>
-    <div class="guest-date">
-      June 24
-    </div>
-    <div class="guest-name">
-      Magic Johnson
-    </div>
-  </div>
-
-
-  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
-    <div class="guest-image">
-      <img src="images/magic-johnson.jpg" class="guest-image-width">
-    </div>
-    <div class="guest-date">
-      June 24
-    </div>
-    <div class="guest-name">
-      Magic Johnson
-    </div>
-  </div>
-
-
-  <div class="season-guests-row col-lg-2 col-md-3 col-sm-4 col-xs-6">
-    <div class="guest-image">
-      <img src="images/magic-johnson.jpg" class="guest-image-width">
-    </div>
-    <div class="guest-date">
-      June 24
-    </div>
-    <div class="guest-name">
-      Magic Johnson
-    </div>
-  </div>
 
 
 
