Re #5: Revisions from the meeting with Chris and Rachel

--- a/index.html
+++ b/index.html
@@ -192,15 +192,11 @@
         August 26
       </div>
       <div class="guest-name">
-        Guest TBD
+        Jaclyn Smith
       </div>
     </div>
 
   </div>
-
-
-
-
 
 </div>
 
