Re #5: updating images and fonts and other things

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </div>
   <div class="video">
     <div class="video-container">
-      <video controls poster="images/celebs/video-still-magic.jpg">
+      <video poster="images/celebs/video-still-magic.jpg">
       <source src="images/videos/episode1-magic.mp4" type="video/mp4">
       </video>
     </div>
@@ -186,7 +186,7 @@
     </div>
     <div class="season-guests-celebrity">
       <div class="guest-image">
-        <img src="images/celebs/tbd.jpg" class="guest-image-width">
+        <img src="images/celebs/jaclynsmith.jpg" class="guest-image-width">
       </div>
       <div class="guest-date">
         August 26
