--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
   <meta property="og:title" content="Objectified">
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="Watch Objectified, Sundays at 8pm ET / 5pm PT on the Fox News Channel" />
-  <meta property="og:image" content="http://objectifiedtv.com/images/og-img-objectified-480x360.jpg" />
-  <meta property="og:image" content="http://objectifiedtv.com/images/og-img-objectified-1200x630.jpg" />
+  <meta property="og:description" content="Watch Objectified, Sundays at 8pm ET / 5pm PT or 11pm ET / 8pm PT on Fox News Channel." />
+  <meta property="og:image" content="http://objectifiedtv.com/images/og-image-objectified-480x360.jpg" />
+  <meta property="og:image" content="http://objectifiedtv.com/images/og-image-objectified-1200x630.jpg" />
   <meta property="og:url" content="http://objectifiedtv.com">
 
   <link rel="icon" type="image/x-icon" href="http://objectifiedtv.com/images/favicon.ico" />
@@ -70,7 +70,7 @@
   </div>
   <div class="video">
     <div class="video-container">
-      <video poster="images/celebs/video-still-magic.jpg">
+      <video autoplay muted poster="images/celebs/video-still-magic.jpg">
       <source src="images/videos/episode1-magic.mp4" type="video/mp4">
       </video>
     </div>
