Re #7: Applying Matt's Latest Codes

--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
       Each week, Harvey Levin will showcase intimate interviews with high-profile newsmakers and celebrities who will tell their life stories through certain objects they have chosen to keep close over the years. The objects are jumping points in understanding how certain experiences shaped them into who they are today.
     </div>
   </div>
-  <div class="video">
+  <div class="video" id="video">
     <div class="video-border">
       <div class="video-container">
-        <video controls autoplay muted>
+        <video controls autoplay>
           <source src="images/videos/episode1-magic.mp4" type="video/mp4">
         </video>
-        <div class="video-poster"></div>
-        <svg class="video-overlay-play-button" viewBox="0 0 200 200" alt="Play video">
+        <div class="video-poster" id="video-poster"></div>
+        <svg class="video-overlay-play-button" id="video-overlay-play-button" viewBox="0 0 200 200" alt="Play video">
           <style type="text/css">
             .st0{stroke:#EBC547;stroke-width:6;stroke-miterlimit:10;}
             .st1{fill:#EBC547;}
@@ -214,9 +214,8 @@
 
 <script type="text/javascript">
   var videoPlayButton,
-      videoContainer = document.getElementsByClassName('video-container')[0],
-      videoPoster = document.getElementsByClassName('video-poster')[0],
-      videoPlayButton = document.getElementsByClassName('video-overlay-play-button')[0],
+      videoPoster = document.getElementById('video-poster'),
+      videoPlayButton = document.getElementById('video-overlay-play-button'),
       video = document.getElementsByTagName('video')[0],
 
       videoMethods = {
@@ -241,6 +240,8 @@
   window.addEventListener("DOMContentLoaded", onload, false);
 
   function onload () {
+    videoPoster.classList.add('is-loaded')
+    videoPlayButton.classList.add('is-loaded')
     video.onended = onended;
     video.onplay = onplay;
   }
@@ -250,7 +251,7 @@
   }
 
   function onplay () {
-    videoMethods.hideVideoPlayButton()
+    videoMethods.hideVideoPlayButton();
   }
 </script>
 </body>
