--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
   <script>
     window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments)}; gtag('js', new Date()); gtag('config', 'UA-106337001-1')
   </script>
+  <script>
+    window.location = "http://www.telepicturestv.com";
+  </script>
 
 </head>
 <body id="objectified-bg">
