--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments)}; gtag('js', new Date()); gtag('config', 'UA-106337001-1')
   </script>
   <script>
-    window.location = "http://www.telepicturestv.com";
+    window.location = "http://www.tmz.com";
   </script>
 
 </head>
