Re #9: updating dana white image and css cleaned up

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </div>
     <div class="season-guests-celebrity">
       <div class="guest-image">
-        <img src="images/celebs/danawhite.jpg" class="guest-image-width">
+        <img src="images/celebs/dana-white.jpg" class="guest-image-width">
       </div>
       <div class="guest-date">
         August 19
